# burrito-server

./: Cargo.toml
src/: main.rs  position.rs  velocity.rs
static/img/: UNMSM.json  ruta.json
static/scripts/: index.js
templates/: index.html.tera
